docs/apache-airflow-providers-apache-kylin/3.6.0/_sources/_api/airflow/providers/apache/kylin/hooks/kylin/index.rst.txt
:py:mod:`airflow.providers.apache.kylin.hooks.kylin`
====================================================

.. py:module:: airflow.providers.apache.kylin.hooks.kylin


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.apache.kylin.hooks.kylin.KylinHook




.. py:class:: KylinHook(kylin_conn_id = default_conn_name, project = None, dsn = None)


   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Interact with Kylin to run CubeSource commands and get job status.

   :param kylin_conn_id: The connection id as configured in Airflow administration.
   :param project: project name
   :param dsn: dsn

   .. py:attribute:: conn_name_attr
      :value: 'kylin_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'kylin_default'

      

   .. py:attribute:: conn_type
      :value: 'kylin'

      

   .. py:attribute:: hook_name
      :value: 'Apache Kylin'

      

   .. py:method:: get_conn()

      Return connection for the hook.


   .. py:method:: cube_run(datasource_name, op, **op_args)

      Run CubeSource command which in CubeSource.support_invoke_command.

      :param datasource_name:
      :param op: command
      :param op_args: command args
      :return: response


   .. py:method:: get_job_status(job_id)

      Get job status.

      :param job_id: kylin job id
      :return: job status



